--- a/css/styles.css
+++ b/css/styles.css
@@ -9,29 +9,23 @@ body {
     font-family: sans-serif;
 }
 
-a {
-    text-decoration: none;
-}
-
 li {
     list-style: none;
 }
 
-/* NAVBAR STYLING STARTS */
+/* Navbar */
 .navbar {
     display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 20px;
     background-color: black;
     color: #fff;
 }
 
-.nav-links a {
-    color: #fff;
-}
-
-/* LOGO */
+/* Logo */
 .logo {
     height: 60px;
 }
@@ -40,11 +34,13 @@ li {
     cursor: pointer;
 }
 
-/* NAVBAR MENU */
+/* Menu */
 .menu {
     display: flex;
     gap: 1em;
     font-size: 18px;
+    color: white;
+    background-color:black;
 }
 
 .menu li:hover {
@@ -58,64 +54,33 @@ li {
     padding: 5px 14px;
 }
 
-/* DROPDOWN MENU */
-.services {
-    position: relative; 
-}
-
-.dropdown {
-    background-color: rgb(1, 139, 139);
-    padding: 1em 0;
-    position: absolute; /*WITH RESPECT TO PARENT*/
-    display: none;
-    border-radius: 8px;
-    top: 35px;
-}
-
-.dropdown li + li {
-    margin-top: 10px;
-}
-
-.dropdown li {
-    padding: 0.5em 1em;
-    width: 8em;
-    text-align: center;
-}
-
-.dropdown li:hover {
-    cursor: pointer;
-    background-color: #4c9e9e;
-}
-
-.services:hover .dropdown {
-    display: block;
-}
-  
-/* RESPONSIVE NAVBAR MENU STARTS */
-
-/* CHECKBOX HACK */
-
+/* Checkbox */
 input[type=checkbox] {
     display: none;
 } 
 
-/* HAMBURGER MENU */
 .hamburger {
     display: none;
     font-size: 24px;
     user-select: none;
 }
 
-/* APPLYING MEDIA QUERIES */
+/* Media Queries */
 @media (max-width: 768px) {
+    /* Navbar */
+    .navbar {
+        flex-wrap: wrap;
+    }
+
+    /* Menu */
     .menu {
-        display:none;
-        position: static;
-        background-color:black;
+        display: none;
+        flex-direction: column;
         right: 0;
         left: 0;
         text-align: center;
         padding: 16px 0;
+        flex-basis: 100%;
     }
 
     .menu li:hover {
@@ -128,22 +93,13 @@ input[type=checkbox] {
         margin-top: 12px;
     }
 
+    /* Checkbox */
     input[type=checkbox]:checked ~ .menu {
-        display: block;
+        display: flex;
     }
 
     .hamburger {
-        display: block;
-    }
-
-    .dropdown {
-        left: 50%;
-        top: 30px;
-        transform: translateX(35%);
-    }
-
-    .dropdown li:hover {
-        background-color: #4c9e9e;
+        display: flex;
     }
 }
 
@@ -152,8 +108,7 @@ input[type=checkbox] {
         width: 100%;
     }
 
-    .navbar {
-        display: block;
-        text-align:center;
+    .menu {
+        text-align: center;
     }
 }
