--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ li {
     justify-content: space-around;
     padding: 20px;
     background-color: black;
-    color: #fff;
+    color: white;
 }
 
 /* Logo */
@@ -69,12 +69,14 @@ input[type=checkbox] {
     user-select: none;
 }
 
-/* ---------- Content  ---------- */
+/* ---------- Main  ---------- */
 main {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    padding: 20px;
+    gap: 1em;
 }
 
 /* ---------- Footer ----------*/
@@ -86,15 +88,25 @@ footer {
     justify-content: space-around;
     padding: 20px;
     background-color: black;
-    color: #fff;
+    color: white;
 }
 
 #footerLogo {
-    height: 60px;
+    height: 50px;
 }
 
 #footerLogo:hover {
     cursor: pointer;
+}
+
+#instagramLogo{
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    color: white;
+    text-decoration: none;
+    gap: 0.9em;
+    align-items: center;
 }
 
 /* ########## 768px width ########## */
@@ -103,6 +115,7 @@ footer {
     /* Navbar */
     .navbar {
         flex-wrap: wrap;
+        gap: 1em;
     }
 
     /* Menu */
@@ -134,6 +147,12 @@ footer {
     .hamburger {
         display: flex;
     }
+
+    /* ---------- Footer ----------*/
+    footer {
+        flex-wrap: wrap;
+        gap: 1em;
+    }
 }
 
 /* ########## 370px width ##########*/
@@ -146,6 +165,23 @@ footer {
     .menu {
         text-align: center;
     }
+
+    /* ---------- Footer ----------*/
+    #footerLogo {
+        width: 100%;
+    }
+
+    #instagramLogo {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        
+    }
+
+    #instagramLogo p{
+        font-size: 7vw;
+    }
+
 }
 
 /* ########## Dark mode ########## */
