--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,11 @@ li {
 
 .menu li {
     padding: 5px 14px;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 /* Checkbox */
