--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,6 @@ main {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding: 20px;
     gap: 1em;
 }
 
@@ -112,6 +111,52 @@ footer {
     text-decoration: none;
     gap: 0.9em;
     align-items: center;
+}
+
+/* ---------- Content ----------*/
+main {
+    height: 80vh;
+    width: 100vw;
+}
+
+.backgroundImage {
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/AndiDiscGolfWurf.jpg");
+    background-size: cover;
+    background-position: center;
+    --blur: 2px;
+    filter: blur(var(--blur));
+    -webkit-filter: blur(var(--blur));
+}
+
+.backgroundOverlay {
+    height: 100%;
+    width: 100%;
+    background-image: radial-gradient(rgba(48, 94, 44, 0.4) 90%, black);
+}
+
+#homeContent {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#homeText {
+    width: 50%;
+    justify-self: flex-end;
+}
+
+#homeTitle {
+    font-size: 4rem;
+    text-align: center;
+}
+
+#homeCallToActionButtons {
+    height: auto;
+    justify-self: flex-start;
 }
 
 /* ########## 768px width ########## */
