--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,11 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Oswald', sans-serif;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 li {
@@ -18,7 +22,7 @@ li {
 /* ---------- Header and Navigation  ---------- */
 
 /* Navbar */
-.navbar {
+header {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -27,11 +31,14 @@ li {
     padding: 20px;
     background-color: black;
     color: white;
+    width: 100%;
+    min-height: 10vh;
+    gap: 1em;
 }
 
 /* Logo */
 #headerLogo {
-    height: 60px;
+    max-height: 50px
 }
 
 #headerLogo:hover{
@@ -45,6 +52,7 @@ li {
     font-size: 18px;
     color: white;
     background-color:black;
+    font-size: 1.3rem;
 }
 
 .menu li:hover {
@@ -76,15 +84,13 @@ input[type=checkbox] {
 
 /* ---------- Main  ---------- */
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    gap: 1em;
+    --main-min-height: 80vh;
+    min-height: var(--main-min-height);
 }
 
 /* ---------- Footer ----------*/
 footer {
+    position: relative;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -93,17 +99,18 @@ footer {
     padding: 20px;
     background-color: black;
     color: white;
+    min-height: 10vh;
 }
 
 #footerLogo {
-    height: 50px;
+    height: 5vh;
 }
 
 #footerLogo:hover {
     cursor: pointer;
 }
 
-#instagramLogo{
+#instagramLogo {
     height: 30px;
     display: flex;
     flex-direction: row;
@@ -114,58 +121,95 @@ footer {
 }
 
 /* ---------- Content ----------*/
-main {
-    height: 80vh;
-    width: 100vw;
+.background {
+    min-height: var(--main-min-height);
+    position: relative;
 }
 
-.backgroundImage {
-    width: 100%;
-    height: 100%;
+.background::before {
+    
     background-image: url("../img/AndiDiscGolfWurf.jpg");
     background-size: cover;
     background-position: center;
+    position: absolute;
+    z-index: -1;
+    content: "";
+    width: 100%;
+    height: 100%;
     --blur: 2px;
     filter: blur(var(--blur));
     -webkit-filter: blur(var(--blur));
 }
 
 .backgroundOverlay {
-    height: 100%;
+    min-height: var(--main-min-height);
     width: 100%;
     background-image: radial-gradient(rgba(48, 94, 44, 0.4) 90%, black);
+    display: flex;
+    justify-content: space-around;
 }
 
-#homeContent {
-    position: absolute;
+.foreground {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    gap: 20px;
+    max-width: 70vw;
 }
 
-#homeText {
-    width: 50%;
-    justify-self: flex-end;
+.foregroundText {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 10px;
 }
 
-#homeTitle {
-    font-size: 4rem;
+.foregroundTitle {
+    font-size: 3.5rem;
     text-align: center;
+    line-height: 1.3;
 }
 
-#homeCallToActionButtons {
-    height: auto;
-    justify-self: flex-start;
+.foregroundButtonArea {
+    display: flex;
+}
+
+.foregroundCallToActionButton {
+    background-color: white;
+    border-radius: 5px;
+    border: none;
+    color: black;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: 0.3s;
+}
+  
+.foregroundCallToActionButton:hover {
+    background-color: black;
+    color: white;
 }
 
 /* ########## 768px width ########## */
 @media (max-width: 768px) {
     /* ---------- Header and Navigation  ---------- */
+
     /* Navbar */
-    .navbar {
+    header {
         flex-wrap: wrap;
         gap: 1em;
+        min-height: 16vh;
+    } 
+
+    main {
+        --main-min-height: 74vh;
+    }
+
+    #headerLogo {
+        width: 100%;
     }
 
     /* Menu */
@@ -181,7 +225,7 @@ main {
 
     .menu li:hover {
         display: inline-block;
-        background-color:#4c9e9e;
+        background-color:white;
         transition: 0.3s ease;
     }
 
@@ -206,17 +250,22 @@ main {
 }
 
 /* ########## 370px width ##########*/
-@media (max-width: 370px) {
+@media (max-width: 480px) {
     /* ---------- Header and Navigation  ---------- */
-    #headerLogo {
-        width: 100%;
-    }
-
     .menu {
         text-align: center;
     }
 
+    /* ---------- Main ---------- */
+    main {
+        --main-min-height: 67vh;
+    }
+
     /* ---------- Footer ----------*/
+    footer {
+        min-height: 17vh;
+    }
+
     #footerLogo {
         width: 100%;
     }
@@ -225,13 +274,12 @@ main {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-        
+        height: 0,8rem;
     }
 
     #instagramLogo p{
         font-size: 7vw;
     }
-
 }
 
 /* ########## Dark mode ########## */
