--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ footer {
     background-image: radial-gradient(rgba(48, 94, 44, 0.4) 90%, black);
     display: flex;
     justify-content: space-around;
+    padding: 20px 0px;
 }
 
 .foreground {
