--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ header {
 }
 
 /* Checkbox */
-input[type=checkbox] {
+#checkbox_toggle {
     display: none;
 } 
 
@@ -128,8 +128,6 @@ footer {
 }
 
 .background::before {
-    
-    background-image: url("../img/AndiDiscGolfWurf.jpg");
     background-size: cover;
     background-position: center;
     position: absolute;
@@ -142,10 +140,18 @@ footer {
     -webkit-filter: blur(var(--blur));
 }
 
+#homeJoinBackground::before {
+    background-image: url("../img/AndiDiscGolfWurf.jpg");
+}
+
+#joinBackground::before {
+    background-image: url("../img/AndiPutSonne.JPG");
+}
+
 .backgroundOverlay {
     min-height: var(--main-min-height);
     width: 100%;
-    background-image: radial-gradient(rgba(48, 94, 44, 0.4) 90%, black);
+    background-image: radial-gradient(rgba(79, 115, 112, 0.2) 90%, black);
     display: flex;
     justify-content: space-around;
     padding: 20px 0px;
@@ -166,6 +172,7 @@ footer {
     justify-content: space-around;
     flex-direction: column;
     gap: 10px;
+    text-shadow: 3px 3px 8px black;
 }
 
 .foregroundTitle {
@@ -193,6 +200,58 @@ footer {
 .foregroundCallToActionButton:hover {
     background-color: black;
     color: white;
+}
+
+.applicationForm {
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    border-radius: 10px;
+    padding: 20px;
+    gap: 1em;
+    width: 50vw;
+    max-width: 600px;
+}
+
+.applicationForm label {
+    font-size: 1.2rem;
+}
+
+.labelCheckboxCombo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: start;
+    width: 100%;
+}
+
+.labelCheckboxCombo label {
+    font-size: 1rem;
+    width: 85%;
+}
+
+#joinFormButton {
+    width: fit-content;
+    margin-top: 10px;
+}
+
+#joinFormMail {
+    margin-bottom: 10px;
+}
+
+.joinFormInput {
+    min-height: 40px;
+    width: 100%;
+    font-size: 1rem;
+    padding: 10px;
+}
+
+#joinFormConsent,
+#joinFormPassive,
+#joinFormActive  {
+    min-height: 0;
+    height: 20px;
+    width: 5%;
 }
 
 /* ########## 768px width ########## */
@@ -249,6 +308,11 @@ footer {
         flex-wrap: wrap;
         gap: 1em;
     }
+
+    /* ---------- Join Form ----------*/
+    .applicationForm {
+        width: 70vw;
+    }
 }
 
 /* ########## 370px width ##########*/
@@ -281,6 +345,11 @@ footer {
 
     #instagramLogo p{
         font-size: 7vw;
+    }
+
+    /* ---------- Join Form ----------*/
+    .applicationForm {
+        width: 90vw;
     }
 }
 
