--- a/css/styles.css
+++ b/css/styles.css
@@ -226,17 +226,17 @@ footer {
 }
 
 .labelCheckboxCombo label {
-    font-size: 1rem;
+    font-size: 1.1rem;
     width: 85%;
 }
 
 #joinFormButton {
     width: fit-content;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 #joinFormMail {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .joinFormInput {
@@ -252,6 +252,14 @@ footer {
     min-height: 0;
     height: 20px;
     width: 5%;
+}
+
+#joinFormConsentCombo {
+    margin-top: 30px;
+}
+
+#joinFormConsentCombo label {
+    font-size: 0.9rem;
 }
 
 /* ########## 768px width ########## */
