--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,11 @@ footer {
     font-size: 0.9rem;
 }
 
+.temp {
+    text-align: center;
+    margin-top: 20px
+}
+
 /* ########## 768px width ########## */
 @media (max-width: 768px) {
     /* ---------- Header and Navigation  ---------- */
