--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ footer {
 .background {
     min-height: var(--main-min-height);
     position: relative;
+    box-shadow: 0px 0px 2px 2px black;
 }
 
 .background::before {
@@ -160,6 +161,7 @@ footer {
     display: flex;
     justify-content: space-around;
     padding: 20px 0px;
+    box-shadow: 0px 0px 16px 16px rgba(0, 0, 0, 0.5) inset;
 }
 
 .foreground {
@@ -257,7 +259,7 @@ footer {
     margin-top: 30px;
 }
 
-#joinFormMail {
+#joinFromMessage {
     margin-bottom: 15px;
 }
 
@@ -270,7 +272,8 @@ footer {
 
 #joinFormConsent,
 #joinFormPassive,
-#joinFormActive  {
+#joinFormActive,
+#joinFormGoenner  {
     min-height: 0;
     height: 20px;
     width: 5%;
@@ -286,7 +289,7 @@ footer {
 
 .temp {
     text-align: center;
-    margin-top: 20px
+    margin: 20px;
 }
 
 /* ########## 768px width ########## */
