--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,10 @@ footer {
     background-image: url("../img/DaniPuttSonne.JPG");
 }
 
+#courseBackground::before {
+    background-image: url("../img/AndiVorhand.JPG");
+}
+
 .backgroundOverlay {
     min-height: var(--main-min-height);
     width: 100%;
@@ -297,11 +301,11 @@ footer {
     font-size: 1.2rem;
 }
 
-#udiscFrame {
+#udiscIFrame {
     width: 100%;
     height: 100%;
-    background: none !important;
-    visibility: visible;
+    border: none;
+    box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.4);
 }
 
 .temp {
