--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    --form-background-color: rgba(0, 0, 0, 0.6);
+    --primary-color: white;
+    --secondary-color: black;
+    --menu-hover-color: rgba(255, 255, 255, 0.8);
+    --button-background-color: rgba(255, 255, 255, 0.9);
+    --button-hover-color: rgba(0, 0, 0, 0.6);
+    --text-color: var(--primary-color);
+    --button-text-color: var(--secondary-color);
+    --background-gradient-start: rgb(100, 100, 100);
+    --background-gradient: linear-gradient( 170deg, 
+                                            var(--background-gradient-start) 0%, 
+                                            var(--secondary-color) 8%,
+                                            var(--secondary-color) 93%, 
+                                            var(--background-gradient-start) 100%);
+    --background-image-gradient: radial-gradient(   rgba(79, 115, 112, 0.2) 90%, 
+                                                    var(--secondary-color));
 }
 
 body {
@@ -13,8 +29,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: black;
-    background: linear-gradient(-222.5deg, rgba(255,255,255,0.1) 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,1) 90%, rgba(255,255,255,0.1) 100%);
+    background-image: var(--background-gradient);
     padding: 0px 5px;
 }
 
@@ -32,7 +47,7 @@ header {
     align-items: center;
     justify-content: space-around;
     padding: 20px;
-    color: white;
+    color: var(--primary-color);
     width: 100%;
     min-height: 10vh;
     gap: 1em;
@@ -53,14 +68,14 @@ header {
     gap: 1em;
     font-size: 18px;
     color: white;
-    background-color:black;
+    background-color: transparent;
     font-size: 1.3rem;
 }
 
 .menu li:hover {
     cursor: pointer;
-    background-color: white;
-    color: black;
+    background-color: var(--menu-hover-color);
+    color: var(--secondary-color);
     border-radius: 5px;
     transition: 0.3s ease;
 }
@@ -83,12 +98,14 @@ header {
     display: none;
     font-size: 24px;
     user-select: none;
+    cursor: pointer;
 }
 
 /* ---------- Main  ---------- */
 main {
     --main-min-height: 80vh;
     min-height: var(--main-min-height);
+    color: var(--primary-color);
 }
 
 /* ---------- Footer ----------*/
@@ -100,7 +117,7 @@ footer {
     align-items: center;
     justify-content: space-around;
     padding: 20px;
-    color: white;
+    color: var(--primary-color);
     min-height: 10vh;
 }
 
@@ -127,7 +144,7 @@ footer {
 .background {
     min-height: var(--main-min-height);
     position: relative;
-    box-shadow: 0px 0px 2px 2px black;
+    box-shadow: 0px 0px 2px 2px var(--secondary-color);
 }
 
 .background::before {
@@ -166,7 +183,7 @@ footer {
 .backgroundOverlay {
     min-height: var(--main-min-height);
     width: 100%;
-    background-image: radial-gradient(rgba(79, 115, 112, 0.2) 90%, black);
+    background-image: var(--background-image-gradient);
     display: flex;
     justify-content: space-around;
     padding: 20px 0px;
@@ -188,7 +205,7 @@ footer {
     justify-content: space-around;
     flex-direction: column;
     gap: 10px;
-    text-shadow: 3px 3px 8px black;
+    text-shadow: 3px 3px 8px var(--secondary-color);
 }
 
 .foregroundTitle {
@@ -202,10 +219,10 @@ footer {
 }
 
 .foregroundCallToActionButton {
-    background-color: white;
+    background-color: var(--button-background-color);
     border-radius: 5px;
     border: none;
-    color: black;
+    color: var(--button-text-color);
     padding: 16px 32px;
     text-align: center;
     font-size: 1rem;
@@ -215,12 +232,12 @@ footer {
 }
   
 .foregroundCallToActionButton:hover {
-    background-color: black;
-    color: white;
+    background-color: var(--button-hover-color);
+    color: var(--primary-color);
 }
 
 #priceTable {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: var(--form-background-color);
     border-radius: 10px;
     padding: 20px 0px;
     text-align: left;
@@ -239,7 +256,7 @@ footer {
 .applicationForm {
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: var(--form-background-color);
     border-radius: 10px;
     padding: 20px;
     gap: 1em;
@@ -305,7 +322,7 @@ footer {
     width: 100%;
     height: 100%;
     border: none;
-    box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.4);
+    box-shadow: 0px 0px 50px var(--primary-color);
     min-height: 500px;
 }
 
@@ -346,8 +363,6 @@ footer {
 
     .menu li:hover {
         display: inline-block;
-        background-color:white;
-        transition: 0.3s ease;
     }
 
     .menu li + li {
@@ -418,9 +433,6 @@ footer {
 }
 
 /* ########## Dark mode ########## */
-@media (prefers-color-scheme: dark) {
-	body {
-		background-color: #323232;
-		color: white;
-	}
-}
+/*@media (prefers-color-scheme: dark) {
+
+}*/
