add background picture to news

--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,10 @@ footer {
     background-image: url("../img/AndiVorhand.JPG");
 }
 
+#newsBackground::before {
+    background-image: url("../img/AndiBackhand.JPG");
+}
+
 .backgroundOverlay {
     min-height: var(--main-min-height);
     width: 100%;
