favicon and styling news

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,9 +259,8 @@ footer {
 .contentTable {
     background-color: var(--form-background-color);
     border-radius: 10px;
-    padding: 20px 0px;
+    padding: 20px 15px;
     text-align: left;
-    vertical-align: top;
     border-spacing: 50px 5px;
 }
 
@@ -283,6 +282,16 @@ footer {
     gap: 1em;
     width: 50vw;
     max-width: 600px;
+}
+
+.applicationForm h2 {
+    text-align: center;
+}
+
+.applicationForm p {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 0.8rem;
 }
 
 .applicationForm label {
@@ -357,13 +366,25 @@ footer {
     gap: 2em;
 }
 
+#newsTable th, 
+#newsTable td {
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    vertical-align: top;
+    padding: 10px;
+}
+
+#newsTable {
+    border-collapse: collapse;
+}
+
 .temp {
     text-align: center;
     margin: 20px;
 }
 
-/* ########## 768px width ########## */
-@media (max-width: 768px) {
+/* ########## 800px width ########## */
+@media (max-width: 800px) {
     /* ---------- Header and Navigation  ---------- */
 
     /* Navbar */
@@ -426,7 +447,7 @@ footer {
     }
 }
 
-/* ########## 370px width ##########*/
+/* ########## 480px width ##########*/
 @media (max-width: 480px) {
     /* ---------- Header and Navigation  ---------- */
     .menu {
@@ -458,7 +479,7 @@ footer {
         width: 80vw;
     }
 
-    #priceTable {
+    .contentTable {
         font-size: 0.9rem;
         border-spacing: 20px 5px;
     }
